syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.itcast.bulls.stock.struct.grpc.trade";
option java_outer_classname = "StockUserServiceProto";

// 用户管理服务接口
service StockUserService {
    // 用户登陆
    rpc userLogin (LoginRequest) returns (LoginReponse) {

    }
}

// 用户登陆请求
message LoginRequest {
    string userNo = 1;
    string userPwd = 2;
}

// 用户登陆返回结果
message LoginReponse{
    string status = 1;
    string message = 2;
    int64 userId = 3;
    int64 accountId = 4;
}

